fixed button sizing on mobile & updated placeholder text

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -388,7 +388,7 @@ background-color: #fff;
 }
 
 #button {
-  width: 33%;
+  width: 45%;
   height: 50px;
   border-radius: 5px;
   border: none;
